--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <application
-        android:label="dailycue"
+        android:label="DailyCue"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
