--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   http: ^1.2.0
   path_provider: ^2.1.2
   crypto: ^3.0.3
+  device_info_plus: ^10.1.0
 
 dev_dependencies:
   flutter_test:
